--- a/node-api/package.json
+++ b/node-api/package.json
@@ -6,9 +6,12 @@
     "start": "nodemon ./app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "~1.9.1"
   },
